--- a/index.css
+++ b/index.css
@@ -81,3 +81,28 @@ body {
 .circle.active {
   border-color: var(--line-border-fill);
 }
+
+.btn {
+  font-size: 15px;
+  background-color: var(--line-border-fill);
+  color: #fff;
+  border: 0;
+  border-radius: 6px;
+  cursor: pointer;
+  font-family: inherit;
+  padding: 8px 30px;
+  margin: 5px;
+}
+
+.btn:active {
+  transform: scale(0.98);
+}
+
+.bth:focus {
+  outline: 0;
+}
+
+.btn:disabled {
+  background-color: var(--line-border-empty);
+  cursor: not-allowed;
+}
